Wed Apr  6 10:17:53 2016  cremno phobia  <cremno@mail.ru>

	* math.c (ruby_lgamma_r): missing/lgamma_r.c is used on Windows,
	  since msvcrt does not provide it.

	* missing/lgamma_r.c (lgamma_r): fix lgamma(-0.0).
	  [ruby-core:74823] [Bug #12249]

Wed Apr  6 01:22:55 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* math.c (ruby_lgamma_r): mswin's lgamma_r also seems to be wrong.
	  cf. [Bug #12249]

Wed Apr  6 00:53:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (ruby_lgamma_r): fix lgamma(-0.0) on mingw and OSX.

	* math.c (ruby_tgamma): fix tgamma(-0.0) on mingw.
	  [ruby-core:74817] [Bug #12249]

Tue Apr  5 14:50:28 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (mime_putc): fix typo.
	  [Bug #12202] [ruby-core:74802]

Tue Apr  5 00:06:44 2016  Aeris  <aeris@imirhil.fr>

	* ext/openssl/ossl_ssl.c (ossl_ssl_tmp_key): Access to ephemeral
	  TLS session key in case of forward secrecy cipher.  Only
	  available since OpenSSL 1.0.2.  [Fix GH-1318]

	* ext/openssl/extconf.rb: Check for SSL_get_server_tmp_key.

Mon Apr  4 23:37:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_struct): make at_exit a single linked list but
	  not RArray, not to mark the registered functions by the write
	  barrier.  based on the patches by Evan Phoenix.
	  [ruby-core:73908] [Bug #12095]

Mon Apr  4 17:43:45 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change default value of
	  RUBY_GC_HEAP_FREE_SLOTS_MIN_RATIO 0.3 -> 0.2
	  RUBY_GC_HEAP_FREE_SLOTS_MAX_RATIO 0.8 -> 0.65

	  These values are same as Ruby 2.0.0.

	  This change cause GC counts.
	  However, generational GC reduced each (minor) GC time and
	  increase memory locality. So that not so big impact on my
	  benchmarking results.
	  (surprisingly, this fix speed up programs on some cases)

	  You can change these values by environment variables
	  if you feel wrong.

Mon Apr  4 17:36:52 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_double): take an upper_bound.
