@@ -1,3 +1,11 @@
+Wed Apr  6 10:56:15 2016  Anton Davydov  <antondavydov.o@gmail.com>
+
+	* lib/logger.rb (Logger#level=): remove unnecessary local
+	  variable.
+
+	* lib/logger.rb (Logger#initialize, Logger#reopen): [DOC] mention
+	  the default values.  cherrypicked from [GH-1319].
+
 Wed Apr  6 10:17:53 2016  cremno phobia  <cremno@mail.ru>
 
 	* math.c (ruby_lgamma_r): missing/lgamma_r.c is used on Windows,
